Fix image alignment

--- a/_sass/pictures.scss
+++ b/_sass/pictures.scss
@@ -1,7 +1,7 @@
 .picture-grid {
     margin: 3em;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 3em;
 }
 
@@ -15,13 +15,13 @@
 
 @media (max-width: 1420px)  {
     .picture-grid {
-        grid-template-columns: auto auto;
+        grid-template-columns: 1fr 1fr;
     }
 }
 
 @media (max-width: 1080px)  {
     .picture-grid {
-        grid-template-columns: auto;
+        grid-template-columns: 1fr;
         margin: 3em 0;
     }
 }
